// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt button Props border_radius: full 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--border-radius-full"
>
  This is a button
</button>
`;

exports[`Bolt button Props border_radius: large 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--border-radius-large"
>
  This is a button
</button>
`;

exports[`Bolt button Props border_radius: small 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: block 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--block"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: inline 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: inline@from-small 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--inline@from-small"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: primary 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: secondary 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--secondary"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: tertiary 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--tertiary"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: transparent 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--transparent"
>
  This is a button
</button>
`;

exports[`Bolt button Props icon after 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
  <span class="e-bolt-button__icon-after"
        aria-hidden="true"
  >
    <svg class="e-bolt-icon"
         aria-hidden="true"
         enable-background="new 0 0 32 32"
         viewbox="0 0 32 32"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path clip-rule="evenodd"
            d="m28.5 11.8c.7-.7.7-1.9 0-2.6s-1.9-.7-2.6 0l-9.9 9.8-9.8-9.9c-.7-.7-1.9-.7-2.6 0-.4.4-.6.9-.6 1.3 0 .5.2 1 .6 1.3l11.1 11.1c.7.7 1.9.7 2.6 0z"
            fill="#151619"
            fill-rule="evenodd"
      >
      </path>
    </svg>
  </span>
</button>
`;

exports[`Bolt button Props size: large 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--large"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: medium 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: small 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--small"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: xsmall 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--xsmall"
>
  This is a button
</button>
`;

exports[`Bolt button default 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;
